--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,13 @@
+---
+import '../styles/global.css'
+---
+
 <!doctype html>
 <html lang='en'>
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link rel='icon' href='/logo.png' type='image/png' />
     <meta name='generator' content={Astro.generator} />
     <title>Marasa - Wonderful living</title>
   </head>
@@ -11,12 +15,3 @@
     <slot />
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
