--- a/src/components/icons/caret-right.astro
+++ b/src/components/icons/caret-right.astro
@@ -1,11 +1,11 @@
 <svg
   xmlns='http://www.w3.org/2000/svg'
-  width='24'
-  height='24'
-  viewBox='0 0 24 24'
-  fill='currentColor'
+  width='800'
+  height='800'
+  viewBox='-4.5 0 20 20'
   {...Astro.props}
-  ><path stroke='none' d='M0 0h24v24H0z' fill='none'></path><path
-    d='M9 6c0 -.852 .986 -1.297 1.623 -.783l.084 .076l6 6a1 1 0 0 1 .083 1.32l-.083 .094l-6 6l-.094 .083l-.077 .054l-.096 .054l-.036 .017l-.067 .027l-.108 .032l-.053 .01l-.06 .01l-.057 .004l-.059 .002l-.059 -.002l-.058 -.005l-.06 -.009l-.052 -.01l-.108 -.032l-.067 -.027l-.132 -.07l-.09 -.065l-.081 -.073l-.083 -.094l-.054 -.077l-.054 -.096l-.017 -.036l-.027 -.067l-.032 -.108l-.01 -.053l-.01 -.06l-.004 -.057l-.002 -12.059z'
-  ></path></svg
+  ><path
+    d='M.366 19.708c.405.39 1.06.39 1.464 0l8.563-8.264a1.95 1.95 0 0 0 0-2.827L1.768.292A1.063 1.063 0 0 0 .314.282a.976.976 0 0 0-.011 1.425l7.894 7.617a.975.975 0 0 1 0 1.414L.366 18.295a.974.974 0 0 0 0 1.413'
+    fill='currentColor'
+    fill-rule='evenodd'></path></svg
 >
