--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import '../styles/global.css'
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
-    <link rel='icon' href='/logo.png' type='image/png' />
+    <link rel='icon' href='/favicon.png' type='image/png' />
     <meta name='generator' content={Astro.generator} />
     <title>Marasa - Wonderful living</title>
   </head>
