--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Hero from '@/components/Hero.astro'
+import Welcome from '@/components/Welcome.astro'
 import Layout from '@/layouts/Layout.astro'
 ---
 
 <Layout>
   <Hero />
+  <Welcome />
 </Layout>
