--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,15 +1,12 @@
 ---
 import logo from '@/assets/logo.png'
-import { imagesHero } from '@/consts/images'
 import Carousel from './Carousel.astro'
+
+import { imagesHero } from '@/consts/images'
 ---
 
-<section
-  class='relative w-screen h-screen overflow-hidden'
-  data-images={JSON.stringify(imagesHero)}
->
+<section class='relative h-screen'>
   <Carousel images={imagesHero} title='Hero' />
-
   <header
     class='absolute top-0 flex flex-col items-center justify-center text-white w-full py-8'
   >
