--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -6,7 +6,7 @@ import { imagesHero } from '@/consts/images'
 ---
 
 <section class='relative h-screen'>
-  <Carousel images={imagesHero} title='Hero' />
+  <Carousel images={imagesHero} title='Hero' autoPlay />
   <header
     class='absolute top-0 flex flex-col items-center justify-center text-white w-full py-8'
   >
