Añade componente Options y su lógica; actualiza el componente Index para incluirlo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from '@/components/Hero.astro'
+import Options from '@/components/Options.astro'
 import Welcome from '@/components/Welcome.astro'
 import Layout from '@/layouts/Layout.astro'
 ---
@@ -7,4 +8,5 @@ import Layout from '@/layouts/Layout.astro'
 <Layout>
   <Hero />
   <Welcome />
+  <Options />
 </Layout>
