--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -9,7 +9,7 @@ const { class: className, ...restProps } = Astro.props
 
 <section
   class:list={[
-    'w-full min-h-screen overflow-hidden bg-white flex items-center justify-center max-w-7xl mx-auto',
+    'w-full min-h-screen overflow-hidden bg-white flex items-center justify-center max-w-[1440px] mx-auto',
     className
   ]}
   {...restProps}
