--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -19,7 +19,7 @@ import { imagesWelcome } from '@/consts/images'
     </heading>
 
     <p
-      class='text-center text-xl font-light tracking-widest text-primary text-pretty'
+      class='text-center text-xl font-light tracking-widest text-primary text-pretty max-w-[80ch] mx-auto'
     >
       Un exclusivo desarrollo en Puerto Vallarta que redefine el concepto de
       hogar. Ubicado en una de las zonas más privilegiadas de la ciudad, ofrece
