Añade componente StyleLife y actualiza el índice para incluirlo; actualiza imágenes en el archivo de constantes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Hero from '@/components/Hero.astro'
 import Options from '@/components/Options.astro'
+import StyleLife from '@/components/StyleLife.astro'
 import Welcome from '@/components/Welcome.astro'
 import Layout from '@/layouts/Layout.astro'
 ---
@@ -9,4 +10,5 @@ import Layout from '@/layouts/Layout.astro'
   <Hero />
   <Welcome />
   <Options />
+  <StyleLife />
 </Layout>
