Añade componente Premises y su lógica; actualiza el índice para incluirlo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Hero from '@/components/Hero.astro'
 import Options from '@/components/Options.astro'
 import StyleLife from '@/components/StyleLife.astro'
 import Welcome from '@/components/Welcome.astro'
+import Premises from '@/components/Premises.astro'
 import Layout from '@/layouts/Layout.astro'
 ---
 
@@ -11,4 +12,5 @@ import Layout from '@/layouts/Layout.astro'
   <Welcome />
   <Options />
   <StyleLife />
+  <Premises />
 </Layout>
