--- a/src/components/StyleLife.astro
+++ b/src/components/StyleLife.astro
@@ -7,16 +7,18 @@ import Section from './Section.astro'
     <heading
       class='uppercase text-center mb-20 h-fit flex flex-col items-center gap-8'
     >
-      <h2 class='text-xl tracking-[1rem] text-secondary'>Estilo de vida</h2>
+      <h2 class='text-lg sm:text-xl tracking-[1rem] text-primary-coral'>
+        Estilo de vida
+      </h2>
       <h1
-        class='text-5xl tracking-[1rem] font-semibold leading-tight text-primary'
+        class='text-3xl sm:text-5xl tracking-[1rem] font-semibold leading-tight text-primary-blue'
       >
         Vive al maximo
       </h1>
     </heading>
 
     <p
-      class='text-center text-xl font-light tracking-widest text-primary text-pretty max-w-[80ch] mx-auto mb-20'
+      class='text-center text-xl font-light tracking-widest text-primary-blue text-pretty max-w-[80ch] mx-auto mb-20'
     >
       En Marasa, cada día es una oportunidad para disfrutar al máximo. Vive
       rodeado de comodidad y exclusividad, con amenidades que complementan un
@@ -30,7 +32,7 @@ import Section from './Section.astro'
     <img
       src='https://images.pexels.com/photos/2246476/pexels-photo-2246476.jpeg'
       alt='Imagen de estilo de vida'
-      class='w-full h-full aspect-[9/16] md:aspect-[2/1] object-cover'
+      class='w-full h-full aspect-[7/9] sm:aspect-[2/1] object-cover'
     />
   </div>
 </Section>
