--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
+import Layout from '@/layouts/Layout.astro'
 import Hero from '@/components/Hero.astro'
 import Options from '@/components/Options.astro'
 import StyleLife from '@/components/StyleLife.astro'
 import Welcome from '@/components/Welcome.astro'
 import Premises from '@/components/Premises.astro'
-import Layout from '@/layouts/Layout.astro'
+import Ubication from '@/components/Ubication.astro'
+import Areas from '@/components/commons-areas.astro'
 ---
 
 <Layout>
@@ -13,4 +15,6 @@ import Layout from '@/layouts/Layout.astro'
   <Options />
   <StyleLife />
   <Premises />
+  <Ubication />
+  <Areas />
 </Layout>
