Cambia el case de los archivos de la aplicación

--- a/src/components/commons-areas.astro
+++ b/src/components/commons-areas.astro
@@ -1,6 +1,6 @@
 ---
 import { COMMONS_AREAS } from '@/consts/commonsAreas'
-import Section from './Section.astro'
+import Section from './section.astro'
 import CommonAreaItem from './common-area-item.astro'
 ---
 
