--- a/src/components/options.astro
+++ b/src/components/options.astro
@@ -1,6 +1,6 @@
 ---
 import CaretRight from './icons/caret-right.astro'
-import Section from './Section.astro'
+import Section from './section.astro'
 
 import { routesOptions } from '@/consts/routes'
 ---
