--- a/src/components/premises.astro
+++ b/src/components/premises.astro
@@ -1,6 +1,6 @@
 ---
 import Ripple from './icons/ripple.astro'
-import Section from './Section.astro'
+import Section from './section.astro'
 ---
 
 <div class='w-full h-fit bg-primary-blue/40'>
