--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from '@/layouts/Layout.astro'
-import Hero from '@/components/Hero.astro'
-import Options from '@/components/Options.astro'
-import StyleLife from '@/components/StyleLife.astro'
-import Welcome from '@/components/Welcome.astro'
-import Premises from '@/components/Premises.astro'
-import Ubication from '@/components/Ubication.astro'
+import Hero from '@/components/hero.astro'
+import Options from '@/components/options.astro'
+import StyleLife from '@/components/style-life.astro'
+import Welcome from '@/components/welcome.astro'
+import Premises from '@/components/premises.astro'
+import Ubication from '@/components/ubication.astro'
 import Areas from '@/components/commons-areas.astro'
 ---
 
