--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,6 +1,6 @@
 ---
 import logo from '@/assets/logo-blanco.svg'
-import Carousel from './Carousel.astro'
+import Carousel from './carousel.astro'
 
 import { imagesHero } from '@/consts/images'
 ---
