--- a/src/components/style-life.astro
+++ b/src/components/style-life.astro
@@ -1,5 +1,5 @@
 ---
-import Section from './Section.astro'
+import Section from './section.astro'
 ---
 
 <Section class='flex flex-col items-center justify-center'>
