--- a/src/components/welcome.astro
+++ b/src/components/welcome.astro
@@ -1,6 +1,6 @@
 ---
-import Carousel from './Carousel.astro'
-import Section from './Section.astro'
+import Carousel from './carousel.astro'
+import Section from './section.astro'
 
 import { imagesWelcome } from '@/consts/images'
 ---
