--- a/src/components/life-style.astro
+++ b/src/components/life-style.astro
@@ -1,5 +1,10 @@
 ---
 import Section from './section.astro'
+import { imagesLifeStyle } from '@/consts/images'
+import { getLangFromUrl, useTranslations } from '@/i18n/utils'
+
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
 ---
 
 <Section class='flex flex-col items-center justify-center'>
@@ -8,30 +13,24 @@ import Section from './section.astro'
       class='uppercase text-center mb-20 h-fit flex flex-col items-center gap-8'
     >
       <h2 class='text-lg sm:text-xl tracking-[1rem] text-primary-coral'>
-        Estilo de vida
+        {t('life-style.section')}
       </h2>
       <h1
         class='text-3xl sm:text-5xl tracking-[1rem] font-semibold leading-tight text-primary-blue'
       >
-        Vive al maximo
+        {t('life-style.title')}
       </h1>
     </heading>
 
     <p
       class='text-center text-xl font-light tracking-widest text-primary-blue text-pretty max-w-[80ch] mx-auto mb-20'
     >
-      En Marasa, cada día es una oportunidad para disfrutar al máximo. Vive
-      rodeado de comodidad y exclusividad, con amenidades que complementan un
-      estilo de vida activo y relajado. Desde un gimnasio equipado hasta una
-      alberca con jacuzzi, aquí encuentras espacios pensados para compar tir
-      momentos únicos con tu familia o amigos. Disfruta del acceso a áreas
-      verdes, espacios coworking y rooftop, todo diseñado para quienes buscan
-      calidad y distinción en cada detalle.
+      {t('life-style.paragraph')}
     </p>
 
     <img
-      src='https://images.pexels.com/photos/2246476/pexels-photo-2246476.jpeg'
-      alt='Imagen de estilo de vida'
+      src={imagesLifeStyle.src}
+      alt={t('life-style.image.alt')}
       class='w-full h-full aspect-[7/9] sm:aspect-[2/1] object-cover'
     />
   </div>
