--- a/src/components/options.astro
+++ b/src/components/options.astro
@@ -1,8 +1,30 @@
 ---
-import CaretRight from './icons/caret-right.astro'
+import OptionsItem from './options-item.astro'
 import Section from './section.astro'
 
-import { routesOptions } from '@/consts/routes'
+import { getLangFromUrl, useTranslations } from '@/i18n/utils'
+
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
+
+const routesOptions = [
+  {
+    label: t('options.tour'),
+    path: '#'
+  },
+  {
+    label: t('options.model'),
+    path: '#'
+  },
+  {
+    label: t('options.inventory'),
+    path: '#'
+  },
+  {
+    label: t('options.magazine'),
+    path: '#'
+  }
+]
 ---
 
 <Section class='!min-h-fit my-16 px-8 md:px-24 w-full'>
@@ -11,18 +33,7 @@ import { routesOptions } from '@/consts/routes'
   >
     {
       routesOptions.map(({ label, path }) => (
-        <li class='w-full md:w-fit min-w-56 h-full rounded-sm border-2 border-primary-coral group overflow-hidden'>
-          <a href={path} class='relative block'>
-            <div class='absolute inset-0 w-full h-full bg-primary-coral -translate-x-full group-hover:translate-x-0 transition-transform duration-300 ease-in-out z-0' />
-
-            <div class='flex-1 relative z-10 flex flex-row items-center justify-between gap-4 px-6 py-4'>
-              <h4 class='text-md font-semibold uppercase text-primary-coral transition-colors duration-300 group-hover:text-white'>
-                {label}
-              </h4>
-              <CaretRight class='size-4 text-primary-coral transition-colors duration-300 group-hover:text-white' />
-            </div>
-          </a>
-        </li>
+        <OptionsItem label={label} path={path} />
       ))
     }
   </ul>
