--- a/src/components/premises.astro
+++ b/src/components/premises.astro
@@ -1,6 +1,11 @@
 ---
 import Ripple from './icons/ripple.astro'
 import Section from './section.astro'
+
+import { getLangFromUrl, useTranslations } from '@/i18n/utils'
+
+const lang = getLangFromUrl(Astro.url)
+const t = useTranslations(lang)
 ---
 
 <div class='w-full h-fit bg-primary-blue/40'>
@@ -9,35 +14,34 @@ import Section from './section.astro'
       <heading
         class='uppercase text-center mb-20 h-fit flex flex-col items-center gap-8'
       >
-        <h2 class='text-lg sm:text-xl tracking-[1rem]'>Nuestras Premisas</h2>
+        <h2 class='text-lg sm:text-xl tracking-[1rem]'>
+          {t('premises.section')}
+        </h2>
         <h1
           class='text-3xl sm:text-5xl tracking-[1rem] font-semibold leading-tight'
         >
-          Tu lugar ideal
+          {t('premises.title')}
         </h1>
       </heading>
 
       <p
         class='text-center text-xl font-light tracking-widest text-pretty max-w-[80ch] mx-auto mb-20'
       >
-        Marasa es un desarrollo que destaca por su exclusividad, diseño
-        arquitectónico y ubicación estratégica. Con 23 unidades, ofrece
-        privacidad y comodidad. Sus amenidades de lujo y acabados de calidad
-        superior hacen de este proyecto un lugar único para vivir.
+        {t('premises.paragraph')}
       </p>
 
       <ul class='flex flex-row flex-wrap gap-8 justify-center items-center'>
         <li>
           <Ripple class='size-24' />
-          <h5>Playas Cercanas</h5>
+          <h5>{t('premises.items.nearby-beaches')}</h5>
         </li>
         <li>
           <Ripple class='size-24' />
-          <h5>Plazas Comerciales</h5>
+          <h5>{t('premises.items.commercial-plazas')}</h5>
         </li>
         <li>
           <Ripple class='size-24' />
-          <h5>Áreas Verdes</h5>
+          <h5>{t('premises.items.green-areas')}</h5>
         </li>
       </ul>
     </div>
