feat: añade componente de inventario y estilos para estados de disponibilidad

--- a/src/components/Ubication.astro
+++ b/src/components/Ubication.astro
@@ -2,7 +2,7 @@
 import map from '@/assets/map.png'
 ---
 
-<div class='w-screen h-auto'>
+<div class='w-full h-auto'>
   <img
     src={map.src}
     alt='Mapa para encontrar Marasa'
