--- a/src/components/app.astro
+++ b/src/components/app.astro
@@ -7,6 +7,7 @@ import Welcome from '@/components/welcome.astro'
 import Premises from '@/components/premises.astro'
 import Ubication from '@/components/ubication.astro'
 import Areas from '@/components/commons-areas.astro'
+import Inventory from './inventory.astro'
 ---
 
 <Layout>
@@ -17,4 +18,5 @@ import Areas from '@/components/commons-areas.astro'
   <Premises />
   <Ubication />
   <Areas />
+  <Inventory />
 </Layout>
